--- a/package.json
+++ b/package.json
@@ -16,5 +16,17 @@
   "devDependencies": {
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cho196/Timearth.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/cho196/Timearth/issues"
+  },
+  "homepage": "https://github.com/cho196/Timearth#readme"
 }
