--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,53 @@
-node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+.next/trace/
+.next/cache/
+.next/server/
+.next/static/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# vercel
+.vercel
+.DS_Store
+.gitignore
+.next/build-manifest.json
+package.json
+.next/build-manifest.json
+.next/build-manifest.json
+.next/trace
+.next/cache/webpack/client-development/0.pack
+.gitignore
+.next/cache/webpack/server-development/0.pack
+.next/cache/webpack/server-development/0.pack
+.gitignore
+.next/static/chunks/webpack.js
+.gitignore
+.next/static/chunks/pages/_app.js
