add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -37,17 +37,19 @@ yarn-error.log*
 # vercel
 .vercel
 .DS_Store
-.gitignore
-.next/build-manifest.json
-package.json
-.next/build-manifest.json
-.next/build-manifest.json
 .next/trace
-.next/cache/webpack/client-development/0.pack
+package.json
 .gitignore
-.next/cache/webpack/server-development/0.pack
-.next/cache/webpack/server-development/0.pack
-.gitignore
-.next/static/chunks/webpack.js
-.gitignore
+node_modules/.package-lock.json
+.next/static/development/_buildManifest.js
 .next/static/chunks/pages/_app.js
+.next/static/chunks/webpack.js
+.next/server/pages/index.js
+.next/server/middleware-build-manifest.js
+.next/cache/webpack/server-development/index.pack
+.next/cache/webpack/server-development/0.pack
+.next/cache/webpack/client-development/index.pack
+.next/cache/webpack/client-development/0.pack
+.next/trace
+.next/build-manifest.json
+package-lock.json
